# wirelight

./: LICENSE  Makefile  README.md  main.ino  pb.proto
arduino/: Makefile  main.ino
blinken/: Dockerfile  Makefile  README.md  blinken.yml.example  effects.go  main.go  model.go  mqtt.go  strip.go
blinken/effect/: effect.go  northernlights.go  off.go  rainbow.go  simple.go  solid.go  wave.go
blinken/ledclient/: canvas.go  canvas_test.go  ledclient.go  strip.go  strip_test.go
blinken/lib/: rgb.go  rgb_test.go  temperature.go
blinken/mqttcolor/: mqttcolor.go  mqttcolor_test.go
blinken/mqttlight/: mqttlight.go  setup.go
blinken/pb/: pb.pb.go
blinken/ws/: ws.go
dimserver/: Makefile  dim.c
esphome/: doorbell.yaml  laito.yaml  lifx-emulation.h  test.yaml
frontend/: elm-package.json
frontend/public/: index.html
frontend/src/: Main.elm  main.css
kicad/: wirelight.bck  wirelight.dcm  wirelight.lib  wirelight.pro  wirelight.sch
labpanel/colorizer/: .gitignore  Dockerfile  Makefile  main.go
labpanel/colorizer/effect/: colorizer.go  distributor.go
labpanel/colorizer/panel/: panel.go
labpanel/hardware/: Makefile  platformio.ini  wiring.txt
labpanel/hardware/src/: main.ino
laito/: .gitignore  Makefile  platformio.ini
laito/src/: main.ino
ledserver/: .gitignore  Makefile  README.md  led.c  led.cc  led.h  ledserver.service  main.cc  pb.pb-c.c  pb.pb-c.h  pb.pb.cc  pb.pb.h  server.c
nodemcu/: config.lua.example  init.lua  start.lua
nuled/: Cargo.toml  Makefile  README.md  build.rs  config.example
nuled/.cargo/: config.toml
nuled/doc/: chip-configuration.md  parts.md
nuled/pcb/: .gitignore  nuled.kicad_prl  nuled.kicad_pro  nuled.kicad_sch  nuled.kicad_sym
nuled/src/: color.rs  config.rs  effect.rs  led.rs  main.rs  mqtt.rs  old.rs
nuled/src/rust_mqtt/: mod.rs
nuled/src/rust_mqtt/client/: client.rs  client_config.rs  raw_client.rs
nuled/src/rust_mqtt/encoding/: variable_byte_integer.rs
nuled/src/rust_mqtt/network/: mod.rs
nuled/src/rust_mqtt/packet/v5/: auth_packet.rs  connack_packet.rs  connect_packet.rs  disconnect_packet.rs  mqtt_packet.rs  pingreq_packet.rs  pingresp_packet.rs  property.rs  puback_packet.rs  pubcomp_packet.rs  publish_packet.rs  pubrec_packet.rs  pubrel_packet.rs  suback_packet.rs  subscription_packet.rs  unsuback_packet.rs  unsubscription_packet.rs
nuled/src/rust_mqtt/utils/: buffer_reader.rs  buffer_writer.rs
ruled/: .gitignore  Cargo.toml  Makefile  cfg.toml.example
ruled/src/: main.rs  wifi.rs
servo/: Dockerfile  README.md  go.mod  go.sum  servo.go
servo/cmd/servo/: main.go
servo/light/: light.go
stairs/: .gitignore  Makefile  README.md  main.ino  platformio.ini  serial_console.sh
stairs/src/: main.ino
table/: README.md  main.ino
