[package]
name = "nuled"
version = "2.0.0"
authors = ["Kim Tore Jensen <kimtjen@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[dependencies]
esp-backtrace = { version = "0.14.0", features = ["esp32c3", "exception-handler", "panic-handler", "println"] }
esp-hal = { version = "0.20.1", features = [ "esp32c3", "embedded-hal-async", "embassy-futures", "embassy-sync" ] }
esp-println = { version = "0.11.0", features = ["esp32c3", "log", "colors"] }
log = { version = "0.4.21" }
esp-alloc = { version = "0.4.0" }
embedded-io = "0.6.1"
esp-wifi = { version = "0.8.0", features = [
    "esp32c3",
    "utils",
    "smoltcp",
    "wifi",
    "wifi-default",
    "embedded-svc",
    "embassy-net",
    "async"
] }
heapless = { version = "0.8.0", default-features = false }
smoltcp = { version = "0.11.0", default-features = false, features = [
    "medium-ethernet",
    "proto-dhcpv4",
    "proto-igmp",
    "proto-ipv4",
    "socket-dhcpv4",
    "socket-icmp",
    "socket-raw",
    "socket-tcp",
    "socket-udp",
] }
embedded-hal = "1.0.0"
ws2812-spi = "0.5.0"
smart-leds = "0.4.0"
embassy-executor = { version = "0.6.0", features = ["arch-riscv32"] }
esp-hal-embassy = { version = "0.3.0", features = ["esp32c3", "executors", "integrated-timers"] }
embassy-time = "0.3.2"
static_cell = "2.1.0"

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
#opt-level = 's'
opt-level = 3
overflow-checks = false